# openstack-ansible-rsyslog_server

./: .gitreview  CONTRIBUTING.rst  README.rst  Vagrantfile  setup.cfg  tox.ini
defaults/: main.yml
doc/source/: conf.py  index.rst
meta/: main.yml
releasenotes/source/: conf.py  index.rst
tasks/: install-apt.yml  install-yum.yml  install-zypper.yml  main.yml  rsyslog_server_install.yml  rsyslog_server_post_install.yml  rsyslog_server_pre_install.yml
templates/: os_aggregate_storage.j2  rsyslog.conf.j2
tests/: ansible-role-requirements.yml  test.yml
vars/: debian.yml  suse.yml
zuul.d/: project.yaml
